--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@react-native-community/async-storage": "~1.11.0",
     "@react-native-community/checkbox": "^0.5.0",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-navigation/material-top-tabs": "^5.2.16",
     "@react-navigation/native": "^5.7.3",
     "@react-navigation/stack": "^5.9.0",
     "axios": "^0.20.0",
@@ -23,6 +24,7 @@
     "react-native-reanimated": "~1.9.0",
     "react-native-safe-area-context": "~3.0.7",
     "react-native-screens": "~2.9.0",
+    "react-native-tab-view": "^2.15.1",
     "react-native-vector-icons": "^7.0.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.1",
